--- a/src/scss/layout/_main.scss
+++ b/src/scss/layout/_main.scss
@@ -902,6 +902,7 @@ main {
                     outline: 1px dotted black;
                     outline-offset: -7px;
                     border-radius: 20px;
+                    word-break: keep-all;
 
                     &-number {
                         content: "1";
