--- a/src/scss/layout/_main.scss
+++ b/src/scss/layout/_main.scss
@@ -444,6 +444,7 @@ main {
             margin: 5rem auto;
 
             &__img {
+
                 img {
                     width: 100%;
                 }
@@ -532,7 +533,7 @@ main {
 
     @include sp {
         &__ttlwrap {
-            width: 80%;
+            width: 90%;
             margin: 0 auto;
             text-align: center;
             padding: 1.2rem;
@@ -559,7 +560,7 @@ main {
 
         &__inner {
             &__left {
-                width: 90%;
+                width: 85%;
                 justify-content: center;
                 display: block;
                 align-items: center;
@@ -568,6 +569,7 @@ main {
 
                 &__img {
                     img {
+                        border-radius: 30px;
                         width: 100%;
                     }
 
@@ -607,7 +609,7 @@ main {
             }
 
             &__right {
-                width: 90%;
+                width: 85%;
                 justify-content: center;
                 display: block;
                 margin: 1.5rem auto;
@@ -1503,6 +1505,7 @@ main {
                 transform: translate(0, -50%);
                 background: $sub-Color1;
                 border-radius: 50px;
+                max-width: 100%;
             }
 
             &__list {
